examples/test/testpolicy11647.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11647
  namespace: namespace327
spec:
  podSelector:
    matchLabels:
      key19: value15
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key31: value8
          key11: value18
          key23: value23
      podSelector:
        matchLabels:
          key18: value4
